Add swell seasons to be determined automatically